* Fixed: Incorrect file permissions of files at `/framework/assets/svg/` for those uploading the theme manually outside of WordPress.
* Fixed: Theme's default WPML language selector listing languages without translations.
* Fixed: System for generating FontAwesome icon selections in admin.
* Fixed: Minor admin compatibility issue with WPML 3.2 update.
* Removed: Parallax intensity options; now it's based on height of image, proportional to container.
* Updated Bootstrap to 3.3.5.
* Updated FontAwesome to 4.4.

**Important!** For best results with this update:

* You should update to the latest version of the Theme Blvd Layout Builder plugin.
* You should update to the latest version of the Theme Blvd Shortcodes plugin.

--------------------------------------------------------------

2.0.0 - 07/09/2015
------------------

* **Updated Theme Blvd framework to 2.5.0**
* New: Support for tons of new elements and enhancements in [Layout Builder 2.0](https://wordpress.org/plugins/theme-blvd-layout-builder/changelog/) update.
* New: Complete frontend theme re-design.
* New: "Theme Base" system at *Appearance > Theme Base*, allows you to configure different designs and options within the theme.
* New: Post format support.
* New: Mega menus, configured from *Appearance > Menus*.
* New: Frontend sticky menu.
* New: Frontend "Scroll to Top" button.
* New: Frontend floating search box.
* New: Frontend social icons.
* New: Share icons to single posts.
* New: Related posts display to single posts.
* New: "Author Box" for author archives and single posts, configured from user profile admin page.
* New: Code syntax highlighting to "Custom CSS" options.
* New: [WooCommerce](http://wordpress.org/plugins/woocommerce) support, Theme Blvd WooCommerce patch plugin no longer needed.
* New: [WPML](http://themeblvd.com/links/wpml) support, Theme Blvd WPML bridge plugin no longer needed.
* New: [Gravity Forms](http://themeblvd.com/links/gforms) support.