@@ -21,6 +21,7 @@ Jump Start Changelog
 * Fixed: Theme's default WPML language selector listing languages without translations.
 * Fixed: System for generating FontAwesome icon selections in admin.
 * Fixed: Minor admin compatibility issue with WPML 3.2 update.
+* Fixed: Minor admin styling issues with WordPress 4.3.
 * Removed: Parallax intensity options; now it's based on height of image, proportional to container.
 * Updated Bootstrap to 3.3.5.
 * Updated FontAwesome to 4.4.
